--- a/project/app/templates/landing.html
+++ b/project/app/templates/landing.html
@@ -1,4 +1,4 @@
-<a href="{%  url 'set' %}"> set-cookie</a>
+<a href="{%  url 'set' %}"> SET-COOKIES</a>
 <a href="{%  url 'get_data' %}"> get-cookie</a>
 <a href="{%  url 'delete_data' %}"> delete-cookie</a>
 
