--- a/project/app/templates/landing.html
+++ b/project/app/templates/landing.html
@@ -1,6 +1,6 @@
 <a href="{%  url 'set' %}"> SET-COOKIES</a>
 <a href="{%  url 'get_data' %}"> GET-COOKIES</a>
-<a href="{%  url 'delete_data' %}"> delete-cookie</a>
+<a href="{%  url 'delete_data' %}"> DELETEE-COOKIES</a>
 
 {% if set1 %}
     
