--- a/project/app/templates/landing.html
+++ b/project/app/templates/landing.html
@@ -1,5 +1,5 @@
 <a href="{%  url 'set' %}"> set-COOKIES</a>
-<a href="{%  url 'get_data' %}"> GET-COOKIES</a>
+<a href="{%  url 'get_data' %}"> get-COOKIES</a>
 <a href="{%  url 'delete_data' %}"> DELETEE-COOKIES</a>
 
 {% if set1 %}
