--- a/project/app/templates/landing.html
+++ b/project/app/templates/landing.html
@@ -1,4 +1,4 @@
-<a href="{%  url 'set' %}"> set-COOKIES</a>
+<a href="{%  url 'set' %}"> GET-COOKIES</a>
 <a href="{%  url 'get_data' %}"> get-COOKIES</a>
 <a href="{%  url 'delete_data' %}"> delete-COOKIES</a>
 
