--- a/project/app/templates/landing.html
+++ b/project/app/templates/landing.html
@@ -26,7 +26,7 @@
 
 {% if data %}
     <h1> Get Data From Cookies </h1>
-    Name : {{data.name}}
+    name : {{data.name}}
     Email : {{data.email}}
     Password : {{data.password}}
 
