--- a/project/app/templates/landing.html
+++ b/project/app/templates/landing.html
@@ -27,7 +27,7 @@
 {% if data %}
     <h1> Get Data From Cookies </h1>
     name : {{data.name}}
-    Email : {{data.email}}
+    email : {{data.email}}
     Password : {{data.password}}
 
 {% endif %}
