--- a/project/app/templates/landing.html
+++ b/project/app/templates/landing.html
@@ -28,6 +28,6 @@
     <h1> Get Data From Cookies </h1>
     name : {{data.name}}
     email : {{data.email}}
-    Password : {{data.password}}
+    password : {{data.password}}
 
 {% endif %}
