--- a/project/app/templates/landing.html
+++ b/project/app/templates/landing.html
@@ -26,7 +26,7 @@
 
 {% if data %}
     <h1> Get Data From Cookies </h1>
-    name : {{data.name}}
+    Namee: {{data.name}}
     email : {{data.email}}
     password : {{data.password}}
 
