--- a/project/app/templates/landing.html
+++ b/project/app/templates/landing.html
@@ -6,7 +6,7 @@
     
 <form action="{% url 'get_data' %}" method="POST">
     {% csrf_token %}
-    <label>Name:</label>
+    <label>name:</label>
     <input type="text" name="name" placeholder="Enter your name" required>
     <br><br>
 
