--- a/project/app/templates/landing.html
+++ b/project/app/templates/landing.html
@@ -10,7 +10,7 @@
     <input type="text" name="name" placeholder="Enter your name" required>
     <br><br>
 
-    <label>Email:</label>
+    <label>email:</label>
     <input type="email" name="email" placeholder="Enter your email" required>
     <br><br>
 
