--- a/project/app/templates/landing.html
+++ b/project/app/templates/landing.html
@@ -14,7 +14,7 @@
     <input type="email" name="email" placeholder="Enter your email" required>
     <br><br>
 
-    <label>Password:</label>
+    <label>password:</label>
     <input type="password" name="password" placeholder="Enter password" required>
     <br><br>
 
