--- a/project/app/templates/landing.html
+++ b/project/app/templates/landing.html
@@ -18,7 +18,7 @@
     <input type="password" name="password" placeholder="Enter password" required>
     <br><br>
 
-    <button type="submit">SET DATA</button>
+    <button type="submit">set  data</button>
 </form>
 
 {% endif %}
