--- a/project/app/templates/landing.html
+++ b/project/app/templates/landing.html
@@ -25,7 +25,7 @@
 {{msg}}
 
 {% if data %}
-    <h1> Get Data From Cookies </h1>
+    <h1> get data from cookiesss </h1>
     Namee: {{data.name}}
     email : {{data.email}}
     password : {{data.password}}
